Fix bug drawer footer on safari

--- a/src/components/LegendModal/LegendModal.less
+++ b/src/components/LegendModal/LegendModal.less
@@ -6,8 +6,7 @@
 }
 
 .modalOnMobile {
-  height: calc(var(--vh) * 100) !important;
-  padding: 0 !important;
+  padding-bottom: 24px !important;
 }
 
 .modal {
